--- a/css/app.css
+++ b/css/app.css
@@ -11,7 +11,29 @@ body {
 .tabla-1 {
   margin-bottom: 50px;
 }
-
+.is-hidden {
+  display: none !important;
+}
+/* tabs */
+nav ul {
+  display: flex;
+  list-style: none;
+  border-bottom: 1px solid var(--color-gray-strong);
+  margin-bottom: 10px;
+  font-size: 10px;
+}
+nav ul li {
+  padding: 10px 18px;
+  cursor: pointer;
+}
+nav ul li.active {
+  margin-bottom: -1px;
+  border: 1px solid var(--color-gray-strong);
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  background-color: var(--color-primary-light);
+  border-bottom-color: transparent;
+}
 /* primera sección */
 .container-top {
   display: flex;
@@ -34,7 +56,8 @@ body {
   margin-right: 10px;
   font-weight: 500;
 }
-.ctn-filters select, .ctn-filters input {
+.ctn-filters select,
+.ctn-filters input {
   font-size: var(--fonts-size-tabla);
   line-height: 6px;
   padding: 5px;
@@ -183,7 +206,7 @@ table tbody tr td {
 }
 .more-ops ul {
   font-size: 5px;
-  color: var(--color-gray-strong);
+  color: var(--color-options);
 }
 .more-ops ul li {
   display: flex;
@@ -201,6 +224,15 @@ table tbody tr td {
   /* generales */
   body {
     padding: 20px;
+  }
+
+  /* navs */
+  nav ul li {
+    width: 50%;
+    text-align: center;
+  }
+  nav ul li.active {
+    margin-bottom: -2px;
   }
 
   /* primera sección */
