--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,8 @@
   padding: 0;
   font-family: var(--font-primary);
   box-sizing: border-box;
+  outline: 0;
+  list-style: none;
 }
 body {
   padding: 50px;
@@ -14,26 +16,29 @@ body {
 .is-hidden {
   display: none !important;
 }
+
 /* tabs */
 nav ul {
   display: flex;
   list-style: none;
-  border-bottom: 1px solid var(--color-gray-strong);
+  border-bottom: 1px solid var(--color-gray-tooltip);
   margin-bottom: 10px;
   font-size: 10px;
 }
 nav ul li {
   padding: 10px 18px;
   cursor: pointer;
+  color: var(--color-gray-strong);
 }
 nav ul li.active {
   margin-bottom: -1px;
-  border: 1px solid var(--color-gray-strong);
+  border: 1px solid var(--color-gray-tooltip);
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   background-color: var(--color-primary-light);
   border-bottom-color: transparent;
 }
+
 /* primera sección */
 .container-top {
   display: flex;
@@ -56,7 +61,7 @@ nav ul li.active {
   margin-right: 10px;
   font-weight: 500;
 }
-.ctn-filters select,
+.container-select .select,
 .ctn-filters input {
   font-size: var(--fonts-size-tabla);
   line-height: 6px;
@@ -67,7 +72,7 @@ nav ul li.active {
 }
 .ctn-options span,
 tbody tr td .more-ops span {
-  font-family: "Material Icons";
+  font-family: var(--font-icons);
   cursor: pointer;
   text-transform: none;
 }
@@ -103,6 +108,57 @@ tbody tr td .more-ops span {
   font-family: var(--font-primary);
 }
 
+/* select */
+.container-select {
+  position: relative;
+  display: inline-block;
+  min-width: 70px;
+}
+.container-select .select::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 3px;
+  display: inline-block;
+  z-index: 3;
+  position: absolute;
+  left: 0;
+}
+.container-select .select {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  background-color: var(--color-primary-light);
+}
+.container-select i {
+  font-family: var(--font-icons);
+  font-style: normal;
+  font-size: 10px;
+}
+.container-select ul {
+  display: none;
+  font-size: var(--fonts-size-tabla);
+  line-height: 6px;
+  background-color: var(--color-primary-light);
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 20px;
+  z-index: 2;
+}
+.container-select.active ul {
+  display: inline-block;
+}
+.container-select ul li {
+  padding: 5px 10px;
+  color: var(--color-gray-strong);
+  cursor: pointer;
+}
+.container-select ul li:hover {
+  background-color: var(--color-gray-tooltip);
+  color: var(--color-primary-light);
+}
 /* tabla */
 .ctn-table {
   max-width: calc(100% - 10px);
@@ -125,7 +181,7 @@ table thead tr td {
 }
 .table-1 table thead tr td::after {
   content: "keyboard_arrow_down";
-  font-family: "Material Icons";
+  font-family: var(--font-icons);
   position: relative;
   top: 1px;
   margin-left: 5px;
@@ -198,10 +254,7 @@ table tbody tr td {
   top: -8px;
   right: 12.5px;
 }
-/* .more-ops:hover .circles + div {
-  display: inline-block;
-} */
-.more-ops div.show{
+.more-ops div.show {
   display: inline-block;
 }
 .more-ops ul {
@@ -252,6 +305,7 @@ table tbody tr td {
   }
   .ctn-filters > div {
     margin-right: 5px;
+    width: 33%;
   }
   .ctn-filters > div:last-child {
     margin-right: 0;
